sway: disable borders

--- a/sway/config
+++ b/sway/config
@@ -216,4 +216,9 @@ bar {
     }
 }
 
+default_border none
+default_floating_border none
+titlebar_padding 1
+titlebar_border_thickness 0
+
 include /etc/sway/config.d/*
