--- a/sway/config
+++ b/sway/config
@@ -60,6 +60,10 @@ output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
 # You can get the names of your inputs by running: swaymsg -t get_inputs
 # Read `man 5 sway-input` for more information about this section.
 
+input * xkb_layout br
+input * xkb_variant abnt2
+input * xkb_model thinkpad60
+
 ### Key bindings
 #
 # Basics:
